add id for label input

--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -247,51 +247,50 @@
                                 </div>
                                 <!-- Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token -->
                                 <div class="mb-3">
-                                  <label for="inputNilaiBE1" class="form-label">Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token</label>
+                                  <label for="inputNilaiBE1" class="form-label" id="labelNilai1">Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token</label>
                                   <input type="text" class="form-control" id="inputNilaiBE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
                                 </div>
                                 <!-- Package Dibuat Sendiri dan Semua Digunakan -->
                                 <div class="mb-3">
-                                  <label for="inputNilaiBE2" class="form-label">Package Dibuat Sendiri dan Semua Digunakan</label>
+                                  <label for="inputNilaiBE2" class="form-label" id="labelNilai2">Package Dibuat Sendiri dan Semua Digunakan</label>
                                   <input type="text" class="form-control" id="inputNilaiBE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
                                 </div>
                                 <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
                                 <div class="mb-3">
-                                  <label for="inputNilaiBE3" class="form-label">Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta</label>
+                                  <label for="inputNilaiBE3" class="form-label" id="labelNilai3">Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta</label>
                                   <input type="text" class="form-control" id="inputNilaiBE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
                                 </div>
                                 <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
                                 <div class="mb-3">
-                                  <label for="inputNilaiBE4" class="form-label">Terintegrasi dengan <a href="">wa.my.id</a></label>
+                                  <label for="inputNilaiBE4" class="form-label" id="labelNilai4">Terintegrasi dengan <a href="">wa.my.id</a></label>
                                   <input type="text" class="form-control" id="inputNilaiBE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
                                 </div>
                                 <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
                             </form>
-                            <hr class="mt-4">
-                            <form id="formInputFE">
-                                <h5 class="card-title fw-semibold mb-4 mt-4">Penilaian Front End Developer</h5>
+                            <!-- <form id="formInputFE"> -->
+                                <!-- <h5 class="card-title fw-semibold mb-4 mt-4">Penilaian Front End Developer</h5> -->
                                 <!-- Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend -->
-                                <div class="mb-3">
+                                <!-- <div class="mb-3">
                                   <label for="inputNilaiFE1" class="form-label">Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend</label>
                                   <input type="text" class="form-control" id="inputNilaiFE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                                </div>
+                                </div> -->
                                 <!-- Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module -->
-                                <div class="mb-3">
+                                <!-- <div class="mb-3">
                                   <label for="inputNilaiFE2" class="form-label">Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module</label>
                                   <input type="text" class="form-control" id="inputNilaiFE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                                </div>
+                                </div> -->
                                 <!-- Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari gtmetrix.com -->
-                                <div class="mb-3">
+                                <!-- <div class="mb-3">
                                   <label for="inputNilaiFE3" class="form-label">Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari <a href="">gtmetrix.com</a></label>
                                   <input type="text" class="form-control" id="inputNilaiFE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                                </div>
+                                </div> -->
                                 <!-- Memakai Custom Domain pada GitHub Pages nya. -->
-                                <div class="mb-3">
+                                <!-- <div class="mb-3">
                                   <label for="inputNilaiFE4" class="form-label">Memakai Custom Domain pada GitHub Pages nya</label>
                                   <input type="text" class="form-control" id="inputNilaiFE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
                                 </div>
                                 <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
-                            </form>
+                            </form> -->
                         </div>
                     </div>
                 </div>
