perbaikan form input nilai p3

--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -221,15 +221,15 @@
                                   <!-- NPM -->
                                   <div class="col-md-6">
                                     <div class="mb-3">
-                                      <label for="inputNPMBE" class="form-label">NPM</label>
-                                      <input type="text" class="form-control" id="inputNPMBE" placeholder="Masukkan NPM">
+                                      <label for="inputNPM" class="form-label">NPM</label>
+                                      <input type="text" class="form-control" id="inputNPM" placeholder="Masukkan NPM">
                                     </div>
                                   </div>
                                   <!-- Tahun Akademik -->
                                   <div class="col-md-6">
                                       <div class="mb-3">
-                                        <label for="inputTahunAkademikBE" class="form-label">Tahun Akademik</label>
-                                        <input type="text" class="form-control" id="inputTahunAkademikBE" placeholder="Masukkan Tahun Akademik">
+                                        <label for="inputTahunAkademik" class="form-label">Tahun Akademik</label>
+                                        <input type="text" class="form-control" id="inputTahunAkademik" placeholder="Masukkan Tahun Akademik">
                                         <div id="textHelp" class="form-text">*contoh : 2023-2024</div>
                                       </div>
                                   </div>
@@ -267,30 +267,6 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
                             </form>
-                            <!-- <form id="formInputFE"> -->
-                                <!-- <h5 class="card-title fw-semibold mb-4 mt-4">Penilaian Front End Developer</h5> -->
-                                <!-- Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend -->
-                                <!-- <div class="mb-3">
-                                  <label for="inputNilaiFE1" class="form-label">Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend</label>
-                                  <input type="text" class="form-control" id="inputNilaiFE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                                </div> -->
-                                <!-- Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module -->
-                                <!-- <div class="mb-3">
-                                  <label for="inputNilaiFE2" class="form-label">Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module</label>
-                                  <input type="text" class="form-control" id="inputNilaiFE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                                </div> -->
-                                <!-- Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari gtmetrix.com -->
-                                <!-- <div class="mb-3">
-                                  <label for="inputNilaiFE3" class="form-label">Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari <a href="">gtmetrix.com</a></label>
-                                  <input type="text" class="form-control" id="inputNilaiFE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                                </div> -->
-                                <!-- Memakai Custom Domain pada GitHub Pages nya. -->
-                                <!-- <div class="mb-3">
-                                  <label for="inputNilaiFE4" class="form-label">Memakai Custom Domain pada GitHub Pages nya</label>
-                                  <input type="text" class="form-control" id="inputNilaiFE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                                </div>
-                                <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
-                            </form> -->
                         </div>
                     </div>
                 </div>
