coba perbaikan post nilai

--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -215,7 +215,7 @@
                     <h5 class="card-title fw-semibold mb-4">Penilaian Sidang Proyek 3</h5>
                     <div class="card">
                         <div class="card-body">
-                            <form id="formInputBE">
+                            <form id="formInput">
                                 <h5 class="card-title fw-semibold mb-4" id="titleForm">Penilaian Backend Developer</h5>
                                 <div class="row">
                                   <!-- NPM -->
@@ -262,7 +262,7 @@
                                 </div>
                                 <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
                                 <div class="mb-3">
-                                  <label for="inputNilaiBE4" class="form-label" id="labelNilai4">Terintegrasi dengan <a href="">wa.my.id</a></label>
+                                  <label for="inputNilaiBE4" class="form-label" id="labelNilai4">Terintegrasi dengan wa.my.id</label>
                                   <input type="text" class="form-control" id="inputNilaiBE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
                                 </div>
                                 <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
