--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -213,36 +213,36 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title fw-semibold mb-4">Penilaian Sidang Proyek 3</h5>
+                    <h6>* Pilih terlebih dahulu posisi developer (Front End atau Back End)</h6>
+                    <!-- Posisi -->
+                    <div class="col">
+                      <div class="mb-3">
+                        <select class="form-select" id="selectPosisiAnggota2">
+                          <option value="">Masukkan Posisi</option>
+                          <option value="Frontend">Frontend</option>
+                          <option value="Backend">Backend</option>
+                        </select>
+                      </div>
+                    </div>
                     <div class="card">
                         <div class="card-body">
-                            <form id="formInput">
+                            <form id="formInputBE">
                                 <h5 class="card-title fw-semibold mb-4" id="titleForm">Penilaian Backend Developer</h5>
                                 <div class="row">
                                   <!-- NPM -->
                                   <div class="col-md-6">
                                     <div class="mb-3">
-                                      <label for="inputNPM" class="form-label">NPM</label>
-                                      <input type="text" class="form-control" id="inputNPM" placeholder="Masukkan NPM">
+                                      <label for="inputNPMBE" class="form-label">NPM</label>
+                                      <input type="text" class="form-control" id="inputNPMBE" placeholder="Masukkan NPM">
                                     </div>
                                   </div>
                                   <!-- Tahun Akademik -->
                                   <div class="col-md-6">
                                       <div class="mb-3">
-                                        <label for="inputTahunAkademik" class="form-label">Tahun Akademik</label>
-                                        <input type="text" class="form-control" id="inputTahunAkademik" placeholder="Masukkan Tahun Akademik">
+                                        <label for="inputTahunAkademikBE" class="form-label">Tahun Akademik</label>
+                                        <input type="text" class="form-control" id="inputTahunAkademikBE" placeholder="Masukkan Tahun Akademik">
                                         <div id="textHelp" class="form-text">*contoh : 2023-2024</div>
                                       </div>
-                                  </div>
-                                </div>
-                                <!-- Posisi -->
-                                <div class="col">
-                                  <div class="mb-3">
-                                    <label for="selectPosisiAnggota2" class="form-label">Posisi</label>
-                                    <select class="form-select" id="selectPosisiAnggota2">
-                                      <option value="">Masukkan Posisi</option>
-                                      <option value="Frontend">Frontend</option>
-                                      <option value="Backend">Backend</option>
-                                    </select>
                                   </div>
                                 </div>
                                 <!-- Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token -->
@@ -267,6 +267,48 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
                             </form>
+
+                            <form id="formInputFE" style="display: none;">
+                              <h5 class="card-title fw-semibold mb-4">Penilaian Front End Developer</h5>
+                              <div class="row">
+                                <!-- NPM -->
+                                <div class="col-md-6">
+                                  <div class="mb-3">
+                                    <label for="inputNPMFE" class="form-label">NPM</label>
+                                    <input type="text" class="form-control" id="inputNPMFE" placeholder="Masukkan NPM">
+                                  </div>
+                                </div>
+                                <!-- Tahun Akademik -->
+                                <div class="col-md-6">
+                                    <div class="mb-3">
+                                      <label for="inputTahunAkademikFE" class="form-label">Tahun Akademik</label>
+                                      <input type="text" class="form-control" id="inputTahunAkademikFE" placeholder="Masukkan Tahun Akademik">
+                                      <div id="textHelp" class="form-text">*contoh : 2023-2024</div>
+                                    </div>
+                                </div>
+                              </div>
+                              <!-- Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend -->
+                              <div class="mb-3">
+                                <label for="inputNilaiFE1" class="form-label">Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend</label>
+                                <input type="text" class="form-control" id="inputNilaiFE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                              </div>
+                              <!-- Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module -->
+                              <div class="mb-3">
+                                <label for="inputNilaiFE2" class="form-label">Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module</label>
+                                <input type="text" class="form-control" id="inputNilaiFE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                              </div>
+                              <!-- Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari gtmetrix.com -->
+                              <div class="mb-3">
+                                <label for="inputNilaiFE3" class="form-label">Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari <a href="">gtmetrix.com</a></label>
+                                <input type="text" class="form-control" id="inputNilaiFE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                              </div>
+                              <!-- Memakai Custom Domain pada GitHub Pages nya. -->
+                              <div class="mb-3">
+                                <label for="inputNilaiFE4" class="form-label">Memakai Custom Domain pada GitHub Pages nya</label>
+                                <input type="text" class="form-control" id="inputNilaiFE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                              </div>
+                              <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
+                          </form>
                         </div>
                     </div>
                 </div>
