--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -232,8 +232,10 @@
                                   <!-- NPM -->
                                   <div class="col-md-6">
                                     <div class="mb-3">
-                                      <label for="inputNPMBE" class="form-label">NPM</label>
-                                      <input type="text" class="form-control" id="inputNPMBE" placeholder="Masukkan NPM">
+                                      <label for="inputNPMBE" class="form-label">Mahasiswa</label>
+                                      <select class="form-select" id="inputNPMBE">
+          
+                                      </select>
                                     </div>
                                   </div>
                                   <!-- Tahun Akademik -->
@@ -274,8 +276,10 @@
                                 <!-- NPM -->
                                 <div class="col-md-6">
                                   <div class="mb-3">
-                                    <label for="inputNPMFE" class="form-label">NPM</label>
-                                    <input type="text" class="form-control" id="inputNPMFE" placeholder="Masukkan NPM">
+                                    <label for="inputNPMFE" class="form-label">Mahasiswa</label>
+                                    <select class="form-select" id="inputNPMFE">
+        
+                                    </select>
                                   </div>
                                 </div>
                                 <!-- Tahun Akademik -->
@@ -319,6 +323,7 @@
     </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../static/dosen/input_nilai_p3.js" type="module"></script>
+  <script src="../static/dosen/list_npm_p3.js" type="module"></script>
   <!-- <script src="../static/theme/bar/navbar.js" type="module"></script> -->
   <!-- <script src="../static/theme/bar/sidebar.js" type="module"></script> -->
   <script src="../static/style/style_input_nilai_p3.js"></script>
