--- a/index.html
+++ b/index.html
@@ -223,6 +223,25 @@
           <div class="card-body">
             <h5 class="card-title fw-semibold mb-4">Rekap Data Mahasiswa</h5>
             <div class="card">
+              <div class="row no-gutters" style="height: 40px">
+                <div
+                  class="col-md-3"
+                  id="filterButtonMasuk"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    width: 15%;
+                    margin-top: 20px;
+                  ">
+                  <input
+                    type="text"
+                    class="form-control col-md-3"
+                    id="searchInputMasuk"
+                    placeholder="Cari" />
+                </div>
+              </div>
+
               <div class="card-body">
                 <div class="table-wrapper table-responsive">
                   <table class="table">
