perbaikan form input search

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                   ">
                   <input
                     type="text"
-                    class="form-control col-md-3"
+                    class="form-control"
                     id="searchInputMasuk"
                     placeholder="Cari" />
                 </div>
