penyesuaian form search

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                   <input
                     type="text"
                     class="form-control"
-                    id="searchInputMasuk"
+                    id="searchInput"
                     placeholder="Cari" />
                 </div>
               </div>
