--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -7,6 +7,7 @@
   <title>Input Nilai Mahasiswa Proyek 3 | APPESI ULBI</title>
   <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
+  <link rel="stylesheet" href="../assets/css/table.css" />
 </head>
 
 <body>
@@ -210,9 +211,73 @@
         </h6>
         <h1 class="h3 mb-3"><b>Penilaian Mahasiswa Bimbingan</b></h1>
         <div class="container-fluid">
+            
+          <div class="card">
+            <div class="card-body">
+                <h5 class="card-title fw-semibold mb-4">Penilaian Sidang Proyek 3</h5>
+                <h6>* Pilih terlebih dahulu nama dosen pembimbing</h6>
+                <!-- Posisi -->
+                <div class="col">
+                  <div class="mb-3">
+                    <select class="form-select" id="selectPembimbing">
+                      <option value="">Masukkan Pembimbing</option>
+                      <option value="0420058801">Roni Andarsyah, S.T.,M.Kom.,SFPC</option>
+                      <option value="0427078401">Cahyo Prianto, S.Pd.,M.T.,CDSP.,SFPC</option>
+                      <option value="0407117405">M. Yusril Helmi Setyawan, S.Kom.,M.Kom.,SFPC</option>
+                      <option value="0410118609">Rolly Maulana Awangga, S.T.,MT.,CAIP,SFPC</option>
+                      <option value="0402058005">Mohamad Nurkamal Fauzan, S.T.,M.T.,SFPC</option>
+                      <option value="0423127804">Roni Habibi, S.Kom.,M.T.,SFPC</option>
+                      <option value="0416048803">Syafrial Fachri Pane,ST. M.TI.,EBDP.,CDSP.,SFPC</option>
+                      <option value="0402047205">Rd. Nuraini Siti Fatonah, S.S.,M.Hum.,SFPC</option>
+                      <option value="0415048901">Nisa Hanum Harani, S.Kom.,M.T.,CDSP.,SFPC</option>
+                      <option value="0415107901">Woro Isti Rahayu, S.T.,M.T.,SFPC</option>
+                      <option value="0403117607">Noviana Riza, S.Si.,M.T.,SFPC</option>
+                    </select>
+                  </div>
+                </div>
+                  <div class="table-wrapper table-responsive">
+                    <div class="table-container">
+                      <table class="table">
+                        <thead>
+                          <tr style="text-align: center; vertical-align: middle">
+                            <th hidden></th>
+                            <th><h6>No</h6></th>
+                            <th><h6>NPM Ke 1</h6></th>
+                            <th><h6>NPM Ke 2</h6></th>
+                            <th><h6>Pembimbing</h6></th>
+                            <th><h6>Tanggal Sidang</h6></th>
+                          </tr>
+                          <!-- end table row-->
+                        </thead>
+                        <tbody id="tablebody">
+                          <!-- JS Data -->
+                          <!-- end table row -->
+                        </tbody>
+                      </table>
+                    <!-- end table -->
+                    </div>
+                  </div>
+                  <!-- start Button Pagination -->
+                  <div class="row">
+                    <div class="col-md-6">
+                    <div class="pagination">
+                      <button id="prevPageBtn" class="btn btn-primary">
+                      Previous
+                      </button>
+                      <span id="currentPage" class="mx-3 mt-2
+                      ">Page 1</span>
+                      <button id="nextPageBtn" class="btn btn-primary">
+                      Next
+                      </button>
+                    </div>
+                    </div>
+                  </div>
+                  <!-- end Button Pagination -->
+                </div>
+            </div>
+          
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title fw-semibold mb-4">Penilaian Sidang Proyek 3</h5>
                     <h6>* Pilih terlebih dahulu posisi developer (Front End atau Back End)</h6>
                     <!-- Posisi -->
                     <div class="col">
