--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -210,6 +210,7 @@
             <a href="index.html">Home Dosen</a> / <a href="">Penilaian Mahasiswa Bimbingan</a> / Proyek 3
         </h6>
         <h1 class="h3 mb-3"><b>Penilaian Mahasiswa Bimbingan</b></h1>
+        <h5>Untuk menilai mahasiswa uji. Silahkan klik <a href="input_nilai_p3_uji.html">link ini</a>.</h5>
         <div class="container-fluid">
             
           <div class="card">
