kembali ke awal untuk input nilai p3 html

--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -259,7 +259,7 @@
                     </div>
                   </div>
                   <!-- start Button Pagination -->
-                  <!-- <div class="row">
+                  <div class="row">
                     <div class="col-md-6">
                     <div class="pagination">
                       <button id="prevPageBtn" class="btn btn-primary">
@@ -272,7 +272,7 @@
                       </button>
                     </div>
                     </div>
-                  </div> -->
+                  </div>
                   <!-- end Button Pagination -->
                 </div>
             </div>
