--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -211,8 +211,7 @@
         </h6>
         <h1 class="h3 mb-3"><b>Penilaian Mahasiswa Bimbingan</b></h1>
         <h5>Untuk menilai mahasiswa uji. Silahkan klik <a href="input_nilai_p3_uji.html">link ini</a>.</h5>
-        <div class="container-fluid">
-            
+        <div class="container-fluid">  
           <div class="card">
             <div class="card-body">
                 <h5 class="card-title fw-semibold mb-4">Penilaian Sidang Proyek 3</h5>
@@ -222,17 +221,17 @@
                   <div class="mb-3">
                     <select class="form-select" id="selectPembimbing">
                       <option value="">Masukkan Pembimbing</option>
-                      <option value="0420058801">Roni Andarsyah, S.T.,M.Kom.,SFPC</option>
-                      <option value="0427078401">Cahyo Prianto, S.Pd.,M.T.,CDSP.,SFPC</option>
-                      <option value="0407117405">M. Yusril Helmi Setyawan, S.Kom.,M.Kom.,SFPC</option>
-                      <option value="0410118609">Rolly Maulana Awangga, S.T.,MT.,CAIP,SFPC</option>
-                      <option value="0402058005">Mohamad Nurkamal Fauzan, S.T.,M.T.,SFPC</option>
-                      <option value="0423127804">Roni Habibi, S.Kom.,M.T.,SFPC</option>
-                      <option value="0416048803">Syafrial Fachri Pane,ST. M.TI.,EBDP.,CDSP.,SFPC</option>
-                      <option value="0402047205">Rd. Nuraini Siti Fatonah, S.S.,M.Hum.,SFPC</option>
-                      <option value="0415048901">Nisa Hanum Harani, S.Kom.,M.T.,CDSP.,SFPC</option>
-                      <option value="0415107901">Woro Isti Rahayu, S.T.,M.T.,SFPC</option>
-                      <option value="0403117607">Noviana Riza, S.Si.,M.T.,SFPC</option>
+                      <option value="Roni Andarsyah, S.T.,M.Kom.,SFPC">Roni Andarsyah, S.T.,M.Kom.,SFPC</option>
+                      <option value="Cahyo Prianto, S.Pd.,M.T.,CDSP.,SFPC">Cahyo Prianto, S.Pd.,M.T.,CDSP.,SFPC</option>
+                      <option value="M. Yusril Helmi Setyawan, S.Kom.,M.Kom.,SFPC">M. Yusril Helmi Setyawan, S.Kom.,M.Kom.,SFPC</option>
+                      <option value="Rolly Maulana Awangga, S.T.,MT.,CAIP,SFPC">Rolly Maulana Awangga, S.T.,MT.,CAIP,SFPC</option>
+                      <option value="Mohamad Nurkamal Fauzan, S.T.,M.T.,SFPC">Mohamad Nurkamal Fauzan, S.T.,M.T.,SFPC</option>
+                      <option value="Roni Habibi, S.Kom.,M.T.,SFPC">Roni Habibi, S.Kom.,M.T.,SFPC</option>
+                      <option value="Syafrial Fachri Pane,ST. M.TI.,EBDP.,CDSP.,SFPC">Syafrial Fachri Pane,ST. M.TI.,EBDP.,CDSP.,SFPC</option>
+                      <option value="Rd. Nuraini Siti Fatonah, S.S.,M.Hum.,SFPC">Rd. Nuraini Siti Fatonah, S.S.,M.Hum.,SFPC</option>
+                      <option value="Nisa Hanum Harani, S.Kom.,M.T.,CDSP.,SFPC">Nisa Hanum Harani, S.Kom.,M.T.,CDSP.,SFPC</option>
+                      <option value="Woro Isti Rahayu, S.T.,M.T.,SFPC">Woro Isti Rahayu, S.T.,M.T.,SFPC</option>
+                      <option value="Noviana Riza, S.Si.,M.T.,SFPC">Noviana Riza, S.Si.,M.T.,SFPC</option>
                     </select>
                   </div>
                 </div>
@@ -275,7 +274,7 @@
                   </div>
                   <!-- end Button Pagination -->
                 </div>
-            </div>
+          </div>
           
             <div class="card">
                 <div class="card-body">
