--- a/nilai_sidang_proyek.html
+++ b/nilai_sidang_proyek.html
@@ -311,8 +311,7 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="static/style/style_sidang_proyek.js"></script>
-  <!-- <script src="static/theme/bar/navbar.js" type="module"></script>
-  <script src="static/theme/bar/sidebar.js" type="module"></script> -->
+  <script src="static/index_nilai.js" type="module"></script>
   <script src="assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/sidebarmenu.js"></script>
