--- a/nilai_sidang_proyek.html
+++ b/nilai_sidang_proyek.html
@@ -7,6 +7,7 @@
   <title>APPESI ULBI</title>
   <link rel="shortcut icon" type="image/png" href="assets/images/logos/favicon-ulbi.png" />
   <link rel="stylesheet" href="assets/css/styles.min.css" />
+  <link rel="stylesheet" href="assets/css/table.css" />
 </head>
 
 <body>
