add css untuk rapihin tabel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>APPESI ULBI</title>
   <link rel="shortcut icon" type="image/png" href="assets/images/logos/favicon-ulbi.png" />
   <link rel="stylesheet" href="assets/css/styles.min.css" />
+  <link rel="stylesheet" href="assets/css/table.css" />
 </head>
 
 <body>
@@ -244,24 +245,26 @@
 
               <div class="card-body">
                 <div class="table-wrapper table-responsive">
-                  <table class="table">
-                    <thead>
-                      <tr style="text-align: center; vertical-align: middle">
-                        <th><h6>No</h6></th>
-                        <th><h6>NPM Ke 1</h6></th>
-                        <th><h6>NPM Ke 2</h6></th>
-                        <th><h6>Pembimbing</h6></th>
-                        <th><h6>Penguji</h6></th>
-                        <th><h6>Tanggal Sidang</h6></th>
-                      </tr>
-                      <!-- end table row-->
-                    </thead>
-                    <tbody id="tablebody">
-                      <!-- JS Data -->
-                      <!-- end table row -->
-                    </tbody>
-                  </table>
+                  <div class="table-container">
+                    <table class="table">
+                      <thead>
+                        <tr style="text-align: center; vertical-align: middle">
+                          <th><h6>No</h6></th>
+                          <th><h6>NPM Ke 1</h6></th>
+                          <th><h6>NPM Ke 2</h6></th>
+                          <th><h6>Pembimbing</h6></th>
+                          <th><h6>Penguji</h6></th>
+                          <th><h6>Tanggal Sidang</h6></th>
+                        </tr>
+                        <!-- end table row-->
+                      </thead>
+                      <tbody id="tablebody">
+                        <!-- JS Data -->
+                        <!-- end table row -->
+                      </tbody>
+                    </table>
                   <!-- end table -->
+                  </div>
                 </div>
                 <!-- start Button Pagination -->
                 <div class="row">
