add th hidden for styling

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                     <table class="table">
                       <thead>
                         <tr style="text-align: center; vertical-align: middle">
+                          <th hidden></th>
                           <th><h6>No</h6></th>
                           <th><h6>NPM Ke 1</h6></th>
                           <th><h6>NPM Ke 2</h6></th>
