create colomn nilai rata-rata

--- a/nilai_sidang_proyek.html
+++ b/nilai_sidang_proyek.html
@@ -273,6 +273,7 @@
                           <th><h6>Tipe Bimbingan</h6></th>
                           <th><h6>Tahun</h6></th>
                           <th><h6>Nilai Sidang</h6></th>
+                          <th><h6>Nilai Akhir</h6></th>
                           <th><h6>Action</h6></th>
                         </tr>
                         <!-- end table row-->
