create search input in nilai sidang proyek

--- a/nilai_sidang_proyek.html
+++ b/nilai_sidang_proyek.html
@@ -261,6 +261,24 @@
           <div class="card-body">
             <h5 class="card-title fw-semibold mb-4">Nilai Sidang Mahasiswa</h5>
             <div class="card">
+              <div class="row no-gutters" style="height: 40px">
+                <div
+                  class="col-md-3"
+                  id="filterButtonMasuk"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    width: 15%;
+                    margin-top: 20px;
+                  ">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="searchInput"
+                    placeholder="Cari" />
+                </div>
+              </div>
               <div class="card-body">
                 <div class="table-wrapper table-responsive">
                   <div class="table-container">
