--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <!-- Content Start -->
       <div class="container-fluid">
         <!-- Alert Start -->
-        <div class="alert alert-info" role="alert">Silahkan bagi dosen pembimbing Proyek 3 untuk approve <b>pengajuan sidang</b> sampai tanggal <b>22 Januari 2024, Pukul 23.59 WIB</b>. Jangan Sampai Terlambat!</div>
+        <div class="alert alert-info" role="alert">Silahkan bagi dosen pembimbing dan penguji Proyek 3 untuk memberikan <b>nilai sidang</b> sampai tanggal <b>16 Februari 2024.</div>
         <!-- Alert End -->
         <div class="card">
           <div class="card-body d-flex flex-row justify-content-center align-items-center">
