--- a/dosen/detail_nilai_p3.html
+++ b/dosen/detail_nilai_p3.html
@@ -290,8 +290,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="../static/style/style_sidang_proyek.js"></script>
-  <script src="../static/index_nilai.js" type="module"></script>
+  <script src="../static/dosen/detail_nilai_p3.js" type="module"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/sidebarmenu.js"></script>
