--- a/dosen/detail_nilai_p3.html
+++ b/dosen/detail_nilai_p3.html
@@ -254,6 +254,7 @@
                           <th><h6>Poin 2</h6></th>
                           <th><h6>Poin 3</h6></th>
                           <th><h6>Poin 4</h6></th>
+                          <th><h6>Action</h6></th>
                         </tr>
                         <!-- end table row-->
                       </thead>
