--- a/dosen/detail_nilai_p3.html
+++ b/dosen/detail_nilai_p3.html
@@ -268,6 +268,7 @@
                 </div>
               </div>
             </div>
+            <h7 class="fw-semibold" id="avgNilai">Nilai Akhir : </h7>
           </div>
         </div>    
         </div>
