create caption di bawah inputan untuk keterangan input nilai

--- a/dosen/update_nilai_p3.html
+++ b/dosen/update_nilai_p3.html
@@ -239,25 +239,29 @@
                 <div class="row mb-3">
                     <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-1</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="" readonly>
+                        <input type="text" class="form-control" id="programStudi" value="">
+                        <div id="poin1" class="form-text">*URL Materi Pelatihan Pengabdian Masyarakat di edx.ulbi.ac.id</div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-2</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="" readonly>
+                        <input type="text" class="form-control" id="programStudi" value="">
+                        <div id="poin2" class="form-text">*Daftar Hadir Pelatihan Pengabdian Masyarakat</div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-3</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="" readonly>
+                        <input type="text" class="form-control" id="programStudi" value="">
+                        <div id="poin3" class="form-text">*Bukti Submit Artikel Pengabdian Masyarakat</div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-4</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="" readonly>
+                        <input type="text" class="form-control" id="programStudi" value="">
+                        <div id="poin4" class="form-text">*URL Google Book yang sudah ber ISBN</div>
                     </div>
                 </div>
             </form>
