penyesuaian form update nilai

--- a/dosen/update_nilai_p3.html
+++ b/dosen/update_nilai_p3.html
@@ -214,6 +214,14 @@
         <div class="container-fluid">
         <!--  Row 1 -->
         <div class="card">
+            <div class="card-body">
+                <div class="mb-3">
+                    <label for="npm" class="form-label">Pemberi Nilai</label>
+                    <input type="text" class="form-control" id="penilai" value="" readonly>
+                </div>
+            </div>
+        </div>
+        <div class="card">
           <div class="card-body">
             <form>
                 <div class="mb-3">
@@ -237,30 +245,30 @@
                 <hr>
                 <!-- Nilai Sidang Proyek 3 -->
                 <div class="row mb-3">
-                    <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-1</label>
+                    <label for="nilai1" class="col-sm-2 col-form-label">Nilai Poin Ke-1</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="">
+                        <input type="text" class="form-control" id="nilai1" value="">
                         <div id="poin1" class="form-text">*URL Materi Pelatihan Pengabdian Masyarakat di edx.ulbi.ac.id</div>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-2</label>
+                    <label for="nilai2" class="col-sm-2 col-form-label">Nilai Poin Ke-2</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="">
+                        <input type="text" class="form-control" id="nilai2" value="">
                         <div id="poin2" class="form-text">*Daftar Hadir Pelatihan Pengabdian Masyarakat</div>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-3</label>
+                    <label for="nilai3" class="col-sm-2 col-form-label">Nilai Poin Ke-3</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="">
+                        <input type="text" class="form-control" id="nilai3" value="">
                         <div id="poin3" class="form-text">*Bukti Submit Artikel Pengabdian Masyarakat</div>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="programStudi" class="col-sm-2 col-form-label">Nilai Poin Ke-4</label>
+                    <label for="nilai4" class="col-sm-2 col-form-label">Nilai Poin Ke-4</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="programStudi" value="">
+                        <input type="text" class="form-control" id="nilai4" value="">
                         <div id="poin4" class="form-text">*URL Google Book yang sudah ber ISBN</div>
                     </div>
                 </div>
@@ -276,7 +284,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="../static/dosen/detail_nilai_p3.js" type="module"></script>
+  <script src="../static/dosen/update_nilai_p3.js" type="module"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/sidebarmenu.js"></script>
