change value to inner text

--- a/dosen/update_nilai_p3.html
+++ b/dosen/update_nilai_p3.html
@@ -248,28 +248,28 @@
                     <label for="nilai1" class="col-sm-2 col-form-label">Nilai Poin Ke-1</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="nilai1" value="">
-                        <div id="poin1" class="form-text">*URL Materi Pelatihan Pengabdian Masyarakat di edx.ulbi.ac.id</div>
+                        <div id="poin1" class="form-text"></div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="nilai2" class="col-sm-2 col-form-label">Nilai Poin Ke-2</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="nilai2" value="">
-                        <div id="poin2" class="form-text">*Daftar Hadir Pelatihan Pengabdian Masyarakat</div>
+                        <div id="poin2" class="form-text"></div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="nilai3" class="col-sm-2 col-form-label">Nilai Poin Ke-3</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="nilai3" value="">
-                        <div id="poin3" class="form-text">*Bukti Submit Artikel Pengabdian Masyarakat</div>
+                        <div id="poin3" class="form-text"></div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="nilai4" class="col-sm-2 col-form-label">Nilai Poin Ke-4</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="nilai4" value="">
-                        <div id="poin4" class="form-text">*URL Google Book yang sudah ber ISBN</div>
+                        <div id="poin4" class="form-text"></div>
                     </div>
                 </div>
             </form>
